--- a/locale/Lao.json
+++ b/locale/Lao.json
@@ -4,5 +4,6 @@
     "Password":"ລະ​ຫັດ​ຜ່ານ",
     "Login":"​ເຂົ້າ​ລະ​ບົບ",
     "Register":"​ລົງ​ທະ​ບຽນ",
-    "Forget password.?":"ລືມ​ລະ​ຫັດ​ຜ່ານ.?"
+    "Forget password.?":"ລືມ​ລະ​ຫັດ​ຜ່ານ.?",
+    "Login Incorrect....":"Login Incorrect...."
 }
