--- a/locale/Lao.json
+++ b/locale/Lao.json
@@ -5,5 +5,6 @@
     "Login":"​ເຂົ້າ​ລະ​ບົບ",
     "Register":"​ລົງ​ທະ​ບຽນ",
     "Forget password.?":"ລືມ​ລະ​ຫັດ​ຜ່ານ.?",
-    "Login Incorrect....":"Login Incorrect...."
+    "Login Incorrect....":"Login Incorrect....",
+    "Buy":"ຊື້"
 }
